# VTR-tokenomics

./: .gitignore  Anchor.toml  Cargo.toml  Readme.md  fix-versions.sh  package-lock.json  package.json  tsconfig.json
app/: index.html
programs/vtr-token/: Cargo.toml
programs/vtr-token/src/: governance.rs  lib.rs
scripts/: deploy.ts
tests/: vtr-token.ts
