[package]
name = "vtr-token"
version = "0.1.0"
description = "VTR Token - Solana SPL Token with advanced tokenomics"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vtr_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }